test_case/rust-lang_rust/36208_244605558.rs

fn f() {}

fn g<'a>() {}

fn main() {
    f::<'static>(); //~ ERROR E0088
    //~^ unexpected lifetime parameter

    g::<'static, 'static>();
}
